--- a/.github/workflows/e2e_playground.yml
+++ b/.github/workflows/e2e_playground.yml
@@ -48,6 +48,10 @@ jobs:
           docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
           docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
 
+      - name: Update Shopware Config
+        run: |
+          docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
+
       - name: Install and Build Plugin
         run: |
           docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make clean'
@@ -57,6 +61,10 @@ jobs:
       - name: Download from Docker
         run: |
           docker cp shop:/var/www/html/custom/plugins/MolliePayments/. $(pwd)/.
+
+      - name: Verify Build
+        run: |
+          ls -la src/Resources/app/storefront/dist
 
   e2e:
     name: E2E Tests | Shopware ${{ github.event.inputs.swVersion }}, PHP ${{ github.event.inputs.phpVersion }}
@@ -88,6 +96,10 @@ jobs:
         run: |
           docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
           docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
+
+      - name: Update Shopware Config
+        run: |
+          docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
 
       - name: Install/Configure Plugin
         run: |
