--- a/.github/workflows/e2e_playground.yml
+++ b/.github/workflows/e2e_playground.yml
@@ -79,6 +79,10 @@ jobs:
           key: cache-plugin
           path: .
 
+      - name: Verify Build
+        run: |
+          ls -la src/Resources/app/storefront/dist
+          
       - name: Download Docker
         run: |
           docker pull dockware/dev:${{ github.event.inputs.swVersion }}
