--- a/.github/workflows/e2e_playground.yml
+++ b/.github/workflows/e2e_playground.yml
@@ -72,6 +72,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Clone Code
+        uses: actions/checkout@v2
+
       - name: Mount NPM Admin Cache
         id: cache-plugin
         uses: actions/cache@v3
@@ -82,7 +85,7 @@ jobs:
       - name: Verify Build
         run: |
           ls -la src/Resources/app/storefront/dist
-          
+
       - name: Download Docker
         run: |
           docker pull dockware/dev:${{ github.event.inputs.swVersion }}
